--- a/index_Test.html
+++ b/index_Test.html
@@ -7,5 +7,6 @@
 <body>
    <h1>le site de google est</h1>
    <a class="fondBleu FonteVerte" href="https://www.google.fr/"> site de google</a>
+   <p>Voici un text de la version 2</p>
 </body>
 </html>
