ajout balise meta se duivi de site

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <!--Lien vers la feuille de styles-->
     <link rel="stylesheet" href="css/styles.css" />
-
+    <meta name="google-site-verification" content="gHqJjGgJ9Q2KYkoZPG8qtgDvZn_JRS163qQi6VHBXZU" />
     <title>Site Booki</title>
   </head>
   <body>
